--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
     "license": "MIT",
     "scripts": {
         "start:dev": "nodemon",
+        "start:debug": "npm run start --debug --watch",
         "build": "rimraf ./build && tsc",
-        "start": "npm run build && node build/index.js"
+        "start": "node ./bin/www"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
@@ -27,7 +28,6 @@
         "koa": "^2.14.1",
         "mysql": "^2.18.1",
         "reflect-metadata": "^0.1.13",
-        "typedi": "^0.10.0",
         "typeorm": "^0.3.15"
     }
 }
