--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,6 @@ lerna-debug.log*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
-!.vscode/extensions.json 
+!.vscode/extensions.json
+.package-lock.json
+.yarn.lock
