--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
+        "@types/jsonwebtoken": "^9.0.2",
         "@types/koa": "^2.13.5",
         "@types/koa__router": "^12.0.0",
+        "@types/koa-bodyparser": "^4.3.10",
         "@types/node": "^18.16.6",
         "nodemon": "^2.0.20",
         "rimraf": "^4.1.2",
@@ -25,8 +27,11 @@
         "@koa/router": "^12.0.0",
         "bcrypt": "^5.1.0",
         "class-transformer": "^0.5.1",
+        "dotenv": "^16.0.3",
+        "jsonwebtoken": "^9.0.0",
         "koa": "^2.14.1",
-        "mysql": "^2.18.1",
+        "koa-bodyparser": "^4.4.0",
+        "mysql2": "^3.3.0",
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.3.15"
     }
