--- a/package.json
+++ b/package.json
@@ -3,13 +3,18 @@
     "version": "1.0.0",
     "main": "./src/index.ts",
     "license": "MIT",
+    "type": "module",
     "scripts": {
         "start:dev": "nodemon",
         "start:debug": "npm run start --debug --watch",
         "build": "rimraf ./build && tsc",
-        "start": "node ./bin/www"
+        "start": "node ./bin/www",
+        "typeorm": "typeorm-ts-node-commonjs",
+        "seeders": "node src/infrastructure/seeders/index.js"
     },
     "devDependencies": {
+        "@babel/cli": "^7.21.5",
+        "@babel/preset-env": "^7.21.5",
         "@types/bcrypt": "^5.0.0",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/koa": "^2.13.5",
