--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
+    "license": "MIT",
     "name": "structure_base",
     "version": "1.0.0",
     "main": "./src/index.ts",
-    "license": "MIT",
     "type": "module",
     "scripts": {
+        "ts-node": "ts-node",
         "start:dev": "nodemon",
         "start:debug": "npm run start --debug --watch",
         "build": "rimraf ./build && tsc",
         "start": "node ./bin/www",
+        "seeders": "node src/infrastructure/seeders/index.js",
         "typeorm": "typeorm-ts-node-commonjs",
-        "seeders": "node src/infrastructure/seeders/index.js"
+        "typeorm:migrate": "npm run typeorm migration:generate -- -n",
+        "typeorm:run": "npm run typeorm migrations:run"
     },
     "devDependencies": {
         "@babel/cli": "^7.21.5",
@@ -18,15 +21,15 @@
         "@types/bcrypt": "^5.0.0",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/koa": "^2.13.5",
-        "@types/koa__router": "^12.0.0",
         "@types/koa-bodyparser": "^4.3.10",
+        "@types/koa__router": "^12.0.0",
         "@types/node": "^18.16.6",
         "nodemon": "^2.0.20",
         "rimraf": "^4.1.2",
         "ts-node": "^10.9.1",
         "tsc": "^2.0.4",
         "tsconfig-paths": "^4.1.2",
-        "typescript": "^4.9.5"
+        "typescript": "^5.0.4"
     },
     "dependencies": {
         "@koa/router": "^12.0.0",
