--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/cookie-parser": "^1.4.3",
-        "@types/cors": "^2.8.13",
-        "@types/express": "^4.17.11",
-        "@types/express-list-endpoints": "^6.0.0",
+        "@types/cors": "^2.8.13", 
         "@types/jsonwebtoken": "^9.0.2",
         "@types/koa": "^2.13.5",
-        "@types/koa-bodyparser": "^4.3.10",
         "@types/koa__router": "^12.0.0",
+        "@types/koa-bodyparser": "^4.3.10",
         "@types/node": "^8.0.29",
         "nodemon": "^2.0.20",
         "rimraf": "^4.1.2",
@@ -30,16 +28,14 @@
         "ts-node-dev": "^1.1.6",
         "tsc": "^2.0.4",
         "tsconfig-paths": "^4.1.2",
-        "typescript": "3.3.3333"
+        "typescript": "^3.3.3333"
     },
     "dependencies": {
         "@koa/router": "^12.0.0",
         "bcrypt": "^5.1.0",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
-        "express": "^4.17.1",
-        "express-list-endpoints": "^6.0.0",
+        "dotenv": "^16.0.3", 
         "jsonwebtoken": "^9.0.0",
         "koa": "^2.14.1",
         "koa-bodyparser": "^4.4.0",
