--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/koa__cors": "^4.0.0",
         "@types/koa__router": "^12.0.0",
         "@types/koa-bodyparser": "^4.3.10",
+        "@types/koa-send": "^4.1.3",
         "@types/node": "^20.3.1",
         "@types/uuid": "^9.0.2",
         "nodemon": "^2.0.20",
@@ -50,6 +51,8 @@
         "koa": "^2.14.1",
         "koa-body": "^6.0.1",
         "koa-bodyparser": "^4.4.0",
+        "koa-send": "^5.0.1",
+        "koa2-swagger-ui": "^5.8.0",
         "mysql2": "^3.3.5",
         "reflect-metadata": "^0.1.10",
         "typeorm": "0.2.38",
