--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,7 +4,7 @@
     "port": 3306,
     "username": "root",
     "password": "123456",
-    "database": "z8l_internal",
+    "database": "base_core",
     "logging": false,
     "entities": ["dist/service/schemas/**/*.js"],
     "migrations": ["src/database/migration/**/*.ts"],
