--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ DB_NAME=test_db3
 DB_HOST=localhost
 DB_USERNAME=postgres
 DB_PASSWORD=123456
+
+# $2b$12$3.7JhJKdBP8Lnoore/aMuOjBt8oiIPwyc1X5JLL6AB9oP2Mh1ato2
