--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ JWT_SECRET=74YLbq4%c!wU
 JWT_EXPIRATION_TIME=1800
 JWT_REFRESH_TOKEN_SECRET=7jML9q4-c!s0
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=86400
-DB_PORT=5432
+DB_PORT=3306
 DB_NAME=test_db3 
 DB_HOST=localhost
-DB_USERNAME=postgres
+DB_USERNAME=root
 DB_PASSWORD=123456
 
 # $2b$12$3.7JhJKdBP8Lnoore/aMuOjBt8oiIPwyc1X5JLL6AB9oP2Mh1ato2
