--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,5 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.package-lock.json
+package-lock.json
 yarn.lock
