--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ JWT_EXPIRATION_TIME=1800
 JWT_REFRESH_TOKEN_SECRET=7jML9q4-c!s0
 JWT_REFRESH_TOKEN_EXPIRATION_TIME=86400
 DB_PORT=3306
-DB_NAME=test_db3 
+DB_NAME=base_core_v2 
 DB_HOST=localhost
 DB_USERNAME=root
 DB_PASSWORD=123456
